# ai-risk-analyzer

./: .dockerignore  .dockerignore.example  .env  .env.example  .gitignore  DOCKER.md  Dockerfile  Makefile  README-business.md  README.md  docker-compose.yml  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: README.md  docker-build-push.yml
src/risk_analyzer/: __init__.py  api.py  config.py  graph.py  joget_adapter.py  main.py  schemas.py  scoring.py
src/risk_analyzer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_api.py  test_joget_adapter.py  test_scoring.py
