[project]
name = "risk-analyzer"
version = "0.1.0"
description = "Straightforward LangGraph-based risk analyzer for Joget folios"
authors = [{ name = "JCTekDev", email = "jc.tek@yahoo.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.26",
    "pydantic>=2.5",
    "python-dotenv>=1.0",
    "langchain-core>=0.2",
    "langchain-openai>=0.1.0",
    "langgraph>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)8s] %(name)s - %(message)s"
log_cli_date_format = "%H:%M:%S"
markers = [
    "integration: marks tests as integration tests (require live Joget)",
]
